fixed some cart issues

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -373,7 +373,11 @@
     "skipForNow": "تخطي الآن",
     "viewProfile": "مشاهدة ملفي الشخصي",
     "noOrder": "لم يتم العثور على طلب",
-    "noOrderDesc": "يبدو أنك وصلت هنا بدون تقديم طلب. يرجى العودة والمحاولة مرة أخرى."
+    "noOrderDesc": "يبدو أنك وصلت هنا بدون تقديم طلب. يرجى العودة والمحاولة مرة أخرى.",
+    "scanTag": "امسح العلامة",
+    "scanTagDesc": "استخدم هاتفك لمسح علامة NFC أو رمز QR الموجود على العبوة.",
+    "exclusiveAccess": "وصول حصري",
+    "exclusiveAccessDesc": "التحقق متاح فقط عبر علامة الأمان المادية على زجاجة East Perfumes الخاصة بك."
   },
   "productData": {
     "amber-night": {
