production ready Hola

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -81,11 +81,8 @@
     "nameZA": "الاسم: ي-أ",
     "gender": {
       "all": "الكل",
-      "men": "رجال",
-      "women": "نساء",
-      "kids": "أطفال",
-      "male": "ذكر",
-      "female": "أنثى"
+      "men": "رجالي",
+      "women": "حريمي"
     }
   },
   "categories": {
@@ -95,8 +92,8 @@
     "body-mist": "بودي ميست",
     "gift-set": "طقم هدايا",
     "accessories": "إكسسوارات",
-    "men": "عطور رجالي",
-    "women": "عطور حريمي",
+    "men": "رجالي",
+    "women": "حريمي",
     "kids": "عطور أطفال",
     "Musk": "مسك",
     "Amber": "عنبر",
