change the brand name

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -64,9 +64,10 @@
     "authentic": "أصلي",
     "notAuthentic": "غير أصلي",
     "currency": "ج.م",
-    "brandName": "إيست بيرفيومز",
+    "brandName": "TIVAQ Fragrance",
     "earnPointsGuest": "سجل دخولك لتكسب {points} نقطة مع هذا الطلب! 🎁",
-    "saveWithPointsGuest": "انضم إلينا الآن للبدء في كسب النقاط والحصول على خصومات حصرية على طلباتك القادمة! 🌟"
+    "saveWithPointsGuest": "انضم إلينا الآن للبدء في كسب النقاط والحصول على خصومات حصرية على طلباتك القادمة! 🌟",
+    "add": "إضافة"
   },
   "filters": {
     "category": "الفئة",
@@ -141,7 +142,7 @@
     "qty": "الكمية",
     "unit": "السعر",
     "line": "المجموع",
-    "whatsappTitle": "🕌 *إيست بيرفيومز — طلب جديد*",
+    "whatsappTitle": "🕌 *TIVAQ Fragrance — طلب جديد*",
     "whatsappConfirm": "يرجى تأكيد طلبي. شكراً لك! 🌹",
     "whatsappSubtotal": "💰 *المجموع الفرعي:*",
     "whatsappPoints": "🎁 *النقاط المستخدمة:*",
@@ -230,7 +231,7 @@
     "verifying": "جاري التحقق...",
     "productAuthentic": "المنتج أصلي ✓",
     "productNotFound": "المنتج غير موجود",
-    "authenticDesc": "هذا المنتج أصلي ومعتمد من East Perfumes.",
+    "authenticDesc": "هذا المنتج أصلي ومعتمد من TIVAQ Fragrance.",
     "invalidDesc": "لم يتم العثور على منتج بهذا الكود. تأكد من الكود وحاول مرة أخرى.",
     "alreadyVerified": "تم التحقق من هذا المنتج مسبقاً وكوده أصبح غير نشط الآن."
   },
@@ -269,7 +270,7 @@
     "terms2Title": "2. الطلبات والمدفوعات",
     "terms2Text": "جميع الطلبات تخضع للتوفر. الأسعار قابلة للتغيير دون إشعار.",
     "terms3Title": "3. الملكية الفكرية",
-    "terms3Text": "جميع المحتوى على هذا الموقع ملك لـ East Perfumes ومحمي بقوانين حقوق النشر.",
+    "terms3Text": "جميع المحتوى على هذا الموقع ملك لـ TIVAQ Fragrance ومحمي بقوانين حقوق النشر.",
     "privacyTitle": "سياسة الخصوصية",
     "privacyIntro": "خصوصيتك مهمة بالنسبة لنا.",
     "privacy1Title": "المعلومات التي نجمعها",
@@ -348,7 +349,17 @@
     "roleUser": "مستخدم",
     "roleAdmin": "مسؤول",
     "leaveBlankPassword": "اتركه فارغاً لعدم التغيير",
-    "categories": "الفئات"
+    "categories": "الفئات",
+    "manageAudio": "إدارة الصوتيات",
+    "manageAudioDesc": "أضف واستعرض وأدر المقاطع الصوتية التي تُشغل عند التحقق من المنتج.",
+    "addAudioURL": "إضافة رابط صوتي",
+    "audioTracks": "المقاطع الصوتية",
+    "noAudioTracks": "لا توجد مقاطع صوتية بعد. أضف أول مقطع صوتي أعلاه.",
+    "audioAdded": "تمت إضافة المقطع الصوتي بنجاح!",
+    "audioRemoved": "تم حذف المقطع الصوتي.",
+    "audioRemoveConfirm": "سيتم حذف هذا المقطع الصوتي.",
+    "audioDuplicate": "هذا الرابط الصوتي موجود بالفعل.",
+    "selectGenderPlaceholder": "اختر الجنس"
   },
   "verify": {
     "title": "تأكيد طلبك",
@@ -374,7 +385,7 @@
     "scanTag": "امسح العلامة",
     "scanTagDesc": "استخدم هاتفك لمسح علامة NFC أو رمز QR الموجود على العبوة.",
     "exclusiveAccess": "وصول حصري",
-    "exclusiveAccessDesc": "التحقق متاح فقط عبر علامة الأمان المادية على زجاجة East Perfumes الخاصة بك."
+    "exclusiveAccessDesc": "التحقق متاح فقط عبر علامة الأمان المادية على زجاجة TIVAQ Fragrance الخاصة بك."
   },
   "productData": {
     "amber-night": {
